# GrabbyBot

grabbybot_controller/: CMakeLists.txt  package.xml
grabbybot_controller/config/: joint_state_controller.yaml  trajectory_controllers.yaml
grabbybot_controller/include/grabbybot_controller/: grabbybot_interface.h
grabbybot_controller/launch/: controller.launch
grabbybot_controller/scripts/: angles_converter.py
grabbybot_controller/src/: angles_converter.cpp  grabbybot_interface.cpp
grabbybot_description/: CMakeLists.txt  package.xml
grabbybot_description/config/: display.rviz
grabbybot_description/launch/: display.launch  gazebo.launch
grabbybot_description/urdf/: grabbybot.urdf.xacro
